--- a/css/style_s.css
+++ b/css/style_s.css
@@ -225,7 +225,7 @@ a.fc-day-grid-event.fc-event {
 .search_clinic{
 	padding: 30px 0px;
 }
-select {
+.search_clinic select {
 	width: 100%;
 	padding: 10px;
 	margin: 10px 0px;
@@ -623,6 +623,26 @@ height: 150px;
      background-color: transparent!important; 
      border-radius: 0px!important; 
 }
+.upload_btn button{
+	width: 100%;
+    border: none;
+    padding: 8px 0px;
+    color: #fff;
+    background-color: #008cd2;
+}
+.book_appointment{
+	padding: 40px 0px;
+}
+.book_appointment label{
+	margin: 10px 0px 3px;
+}
+.book_appointment select {
+	width: 100%;
+	padding: 10px;
+}
+.btn-group-toggle>.btn{
+    margin-top: 0!important;
+}
 @media (max-width: 991px){
 	.doctor_image{
 		margin-bottom: 30px;
@@ -631,5 +651,17 @@ height: 150px;
 		line-height: 30px;
 		text-align: center;
 		margin: 10px 18px;
+	}
+	.form-control{
+		margin-bottom: 15px;
+	}
+	.specialities_toggle_menu .col-lg-3.border{
+		border: none!important;
+	}
+}
+@media (max-width: 575px){
+	.doctor_login_box a{
+		float: none!important;
+		width: 100%;
 	}
 }
