--- a/css/style.css
+++ b/css/style.css
@@ -1,17 +1,60 @@
 @import url('https://fonts.googleapis.com/css?family=Open+Sans:400,700&display=swap');
 /*common css start*/
-body{font-family: 'Open Sans', sans-serif;}
+body{font-family: 'Open Sans', sans-serif;-webkit-font-smoothing: antialiased;-moz-font-smoothing: antialiased;-font-smoothing: antialiased;-moz-osx-font-smoothing: grayscale;}
 h1,h2,h3,h4,h5,h6,p{margin: 0}
 ul{padding: 0; margin: 0;}
 a{display: inline-block; text-decoration: none!important; outline: none!important;}
 /*common css end*/
 /*header section css start*/
+#loader-wrapper {
+    position: fixed;
+    top: 0;
+    left: 0;
+    bottom: 0;
+    right: 0;
+    width: 100vw;
+    height: 100vh;
+    z-index: 9999;
+    background-color: #fff;
+}
+.heartbeatloader {
+    position: absolute;
+    width: 300px;
+    height: 300px;
+    margin: auto;
+    top:0;
+    left:0;
+    right: 0;
+    bottom: 0;
+}
+.svgdraw {
+    top:0px;
+    left:0px;
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    z-index: 3;
+}
+.path {
+    stroke: #0c4e93;
+    stroke-width: 6;
+    stroke-dasharray: 1000px;
+    stroke-dashoffset: 1000px;    
+    animation: draw 1.5s infinite forwards normal linear;
+    position: relative;
+}
+@keyframes draw {
+  to {
+    stroke-dashoffset: 0;
+  }
+}
 header {
     box-shadow: 0px 0px 20px 0px rgba(48, 48, 48, 0.5);
     display: table;
     width: 100%;
     position: relative;
     z-index: 1111;
+    border-top: 5px solid #008cd2;
 }
 .custom_container{
 	width: 100%;
@@ -19,24 +62,34 @@ header {
     padding-left: 15px;
     margin-right: auto;
     margin-left: auto;
-    max-width: 1550px;
+    max-width: 1450px;
+    position: relative;
 }
-.header_top {
-    display: table;
-    width: 100%;
-    background-color: #008cd2;
-    padding: 3px 0px;
+.header_content .logo {
+    float: left;
+    padding: 8px 0px 7px;
 }
-ul.login_register {
+.header_content .header_menu{
     float: right;
 }
-ul.login_register li{
-	display: inline-block;
-	margin-left: 15px;
+.header_menu nav.navbar {
+    float: left;
+    padding: 0 25px;
+    border-right: 2px solid #e1e2e3;
 }
-ul.login_register li > a{
-	font-size: 13px;
-    line-height: 26px;
+.header_menu ul.login_register {
+    float: right;
+}
+ul.login_register li {
+    display: inline-block;
+    margin-left: 30px;
+    float: left;
+}
+ul.login_register li > a {
+    padding: 17.5px 0;
+    font-size: 16px;
+    color: #222;
+    font-weight: 400;
 }
 ul.login_register .dropdown-menu {
     padding: 0;
@@ -46,22 +99,17 @@ ul.login_register .dropdown-item{
 	font-size: 13px;
     padding: 6px 10px;
 }
-ul.login_register .dropdown-item.active, ul.login_register .dropdown-item:active, ul.login_register .dropdown-item:hover{
-	background-color: #0c4e93;
-	color: #fff;
-}
-.header_bottom {
-    display: inline-block;
+.header_content {
+    padding: 0px 80px;
+    display: table;
     width: 100%;
-    padding: 7px 0px;
-    float: left;
 }
 .logo img {
     max-width: 175px;
 }
 button.navbar-toggler {
     position: absolute;
-    right: 0;
+    right: 15px;
     top: 0;
     bottom: 0;
     margin: auto;
@@ -75,37 +123,270 @@ button.navbar-toggler {
 nav.navbar {
 	margin-left: auto;
 }
-.navbar-expand-lg .navbar-nav .nav-item {
+.navbar-expand-xl .navbar-nav .nav-item {
     margin-left: 35px;
 }
-.navbar-expand-lg .navbar-nav .nav-link{
-	padding: 0px;
-	font-size: 16px;
-	color: #222;
-	font-weight: 400;
+.navbar-expand-xl .navbar-nav .nav-item:first-child{
+    margin-left: 0px;
+}
+.navbar-expand-xl .navbar-nav .nav-link {
+    padding: 17.5px 0px;
+    font-size: 16px;
+    color: #222;
+    font-weight: 400;
 }
 .dropdown-toggle::after {
     margin-left: 10px;
     top: 1px;
     position: relative;
 }
-.navbar-expand-lg .navbar-nav .nav-link:hover, .navbar-expand-lg .navbar-nav .nav-link.active{
+.navbar-expand-xl .navbar-nav .nav-item.show .nav-link, .navbar-expand-xl .navbar-nav .nav-link:hover, .navbar-expand-xl .navbar-nav .nav-link.active, .header_content li.dropdown.show .dropdown-toggle , .header_content li.dropdown:hover .dropdown-toggle,.header_content .navbar-nav li.mydropdown:hover .dropdown-toggle{
 	color: #0c4e93;
 }
-.header_bottom .dropdown-menu {
+.header_content .navbar-nav .mydropdown .dropdown-menu {
+    top: 58px;
+    left: 0;
+    right: 0;
+    border-radius: 0;
     padding: 0;
-    top: 42px;
+}
+.header_content .dropdown .dropdown-menu {
+    padding: 0;
+    top: 58px !important;
     min-width: auto;
+    border-radius: 0px;
+    transform: none !important;
 }
-.header_bottom .dropdown-menu .dropdown-item{
-	font-size: 14px;
-	padding: 6px 15px;
+.header_content .dropdown-menu .dropdown-item{
+	font-size: 13px;
+	padding: 8px 15px;
+    border-bottom: 1px solid #ddd;
 }
-.header_bottom .dropdown-item.active,.header_bottom .dropdown-item:active, .header_bottom .dropdown-item:hover{
+.mydropdown .col-xl-6:first-child {
+    border-right: 1px solid #ddd;
+}
+.header_content .dropdown-menu .dropdown-item:last-child{
+    border-bottom: none;
+}
+.header_content .dropdown-item.active,.header_content .dropdown-item:active, .header_content .dropdown-item:hover{
 	color: #fff;
 	background-color: #008cd2;
 }
+.header_content li.dropdown .dropdown-toggle,.header_content .navbar-nav li.mydropdown .dropdown-toggle{
+    pointer-events: none;
+}
+.header_content li.dropdown:hover .dropdown-menu,.header_content .navbar-nav li.mydropdown:hover .dropdown-menu{
+    display: block;
+}
 /*header section css end*/
+/*footer section css start*/
+footer {
+    background-color: #111111;
+    display: table;
+    width: 100%;
+}
+.footer_top, .footer_bottom {
+	padding: 47px;
+}
+.footer_top h6{
+	font-size: 20px;
+	color: #299fd9;
+	padding: 10px 0px 30px;
+}
+footer .logo{
+	padding: 65px 0px 30px;
+}
+footer ul li a, footer ul li p{
+	color: #828383;
+	font-size: 16px;
+}
+footer ul li a:hover{
+	color: #fff;
+}
+.footer_left{
+	float: left;
+	width: 475px;
+}
+.footer_right{
+	float: left;
+	width: calc(100% - 475px);
+	border-left: 1px solid #434141;
+}
+.footer_contact_info {
+	padding: 0px 30px 20px 80px;
+	height: 100%;
+}
+.footer_contact_info p {
+    color: #828383;
+    font-size: 16px;
+    line-height: 34px;
+}
+.footer_bottom{
+	border-top: 1px solid #434141;
+	display: table;
+	width: 100%;
+}
+.footer_contact_details {
+    padding-left: 55px;
+    position: relative;
+}
+.footer_contact_details img {
+    position: absolute;
+    left: 0;
+    top: 0;
+}
+.footer_contact_details h5 {
+    line-height: 40px;
+    font-size: 20px;
+}
+.footer_contact_details a {
+    display: table;
+}
+.footer_contact_details a, .footer_contact_details p {
+    font-size: 16px;
+    color: #828383;
+    line-height: 34px;
+}
+.footer_contact_details a:hover{
+    color: #fff;
+}
+ul.copyright_text{
+	float: left;
+}
+ul.social_media_links{
+	float: right;
+}
+ul.copyright_text li,
+ul.social_media_links li{
+	display: inline-block;
+	float: left;
+	line-height: 40px;
+}
+ul.social_media_links li{
+	margin-left: 10px;
+}
+ul.social_media_links li a:hover img {
+    filter: brightness(100);
+}
+ul.copyright_text li:after{
+	display: inline-block;
+	margin: 0px 5px;
+	line-height: 40px;
+	content: "|";
+	color: #757575;
+}
+ul.copyright_text li p{
+	display: inline-block;
+}
+ul.copyright_text li:last-child:after{
+	display: none;
+}
+/*footer section css end*/
+/*side bar search css start*/
+.right_side_search .side_search_content {
+    width: 400px;
+	top: 100px;
+    right: -400px;
+	position: fixed;
+	padding: 35px;
+	background-image: url(../images/side_search_bg.jpg);
+    background-repeat: no-repeat;
+    transition: all 0.5s;
+}
+.right_side_search.open_search .side_search_content{
+	right: 0px;
+}
+.side_search_content:before {
+    content: "";
+    position: absolute;
+    top: 0;
+    bottom: 0;
+    right: 0;
+    left: 0;
+    margin: auto;
+    background-color: rgba(12, 78, 147, 0.9);
+}
+.side_search_content * {
+    position: relative;
+}
+.side_search_content h6 {
+    font-size: 20px;
+    padding-bottom: 15px;
+}
+.side_search_content p{
+	font-size: 16px;
+    padding-bottom: 28px;
+    line-height: 25px;
+}
+a.search_control_btn {
+    background-color: #0c4e93;
+    padding: 17px 18px;
+    display: table;
+    position: absolute;
+    left: -60px;
+    top: 0;
+    height: 60px;
+    width: 60px;
+}
+.side_search_content a img {
+    filter: grayscale(100%) brightness(400%);
+}
+.side_search_content hr{
+	border-color: #fff;
+	margin: 15px 0px !important;
+}
+.working_days_and_time {
+    display: inline-block;
+    width: 100%;
+}
+.side_search_btn {
+    background-color: #008cd2;
+    color: #fff;
+    border: none;
+    outline: none !important;
+    box-shadow: none !important;
+    font-size: 16px;
+    padding: 7px 30px;
+    margin-bottom: 35px;
+}
+.side_search_content .form-control::placeholder {
+    color: #fff; 
+}
+.side_search_content .form-control:-ms-input-placeholder {
+    color: #fff; 
+}
+.side_search_content .form-control::-ms-input-placeholder {
+    color: #fff; 
+}
+.side_search_content .form-control {
+    background-color: transparent;
+    color: #fff;
+    border-color: #fff !important;
+    font-size: 14px;
+    height: 38px;
+    outline: none!important;
+    box-shadow: none!important;
+}
+.back_to_top {
+    position: fixed;
+    bottom: 10px;
+    right: 10px;
+    color: #fff !important;
+    background-color: rgba(0, 140, 210, 0.5);
+    height: 35px;
+    width: 35px;
+    text-align: center;
+    line-height: 35px;
+    border-radius: 2px;
+    display: none;
+    z-index: 111;
+}
+.back_to_top:hover{
+    background-color: rgba(0, 140, 210, 0.8);
+}
+/*side bar search css end*/
+
+
 /*breadcrumb section css start*/
 .page_breadcrumb {
     background-color: #e5eaf0;
@@ -164,6 +445,7 @@ nav.navbar {
 	bottom: 0;
 	left: 15px;
 	margin: auto;
+	z-index: 11;
 }
 .input_with_icont:after{
 	content: "";
@@ -175,6 +457,7 @@ nav.navbar {
 	background-color: #d6d6d6;
 	height: 35px;
 	width: 1px;
+	z-index: 11;
 }
 .all_page_search_section{
 	border-bottom: 1px solid #dddddd;
@@ -185,115 +468,3 @@ nav.navbar {
 	color: #222;
 }
 /*all page search section end*/
-/*footer section css start*/
-footer {
-    background-color: #111111;
-    display: table;
-    width: 100%;
-}
-.footer_top, .footer_bottom {
-	padding: 50px;
-}
-.footer_top h6{
-	font-size: 20px;
-	color: #299fd9;
-	padding: 10px 0px 30px;
-}
-footer .logo{
-	padding: 65px 0px 30px;
-}
-footer ul li a, footer ul li p{
-	color: #757575;
-	font-size: 16px;
-}
-footer ul li a:hover{
-	color: #fff;
-}
-.footer_left{
-	float: left;
-	width: 475px;
-}
-.footer_right{
-	float: left;
-	width: calc(100% - 475px);
-	border-left: 1px solid #434141;
-}
-.footer_contact_info {
-	padding: 0px 30px 30px 80px;
-	height: 100%;
-}
-.footer_contact_info p{
-	color: #757575;
-	font-size: 16px;
-	line-height: 28px;
-	padding-bottom: 15px;
-}
-.footer_contact_info span{
-	display: block;
-	margin-top: 15px;
-}
-.footer_top span img{
-	margin-right: 10px;
-}
-.footer_top span, .footer_top span a{
-	color: #fff;
-}
-.footer_top a:hover{
-	color: #fff;
-}
-.footer_top ul li {
-    padding-left: 20px;
-    list-style: none;
-    position: relative;
-    line-height: 36px;
-}
-.footer_top ul li:before {
-    position: absolute;
-    content: "";
-    border-top: 6px solid transparent;
-    border-right: 0;
-    border-bottom: 6px solid transparent;
-    border-left: 7px solid #757575;
-    left: 0;
-    top: 12px;
-}
-.footer_bottom{
-	border-top: 1px solid #434141;
-	display: table;
-	width: 100%;
-}
-ul.copyright_text{
-	float: left;
-}
-ul.social_media_links{
-	float: right;
-}
-ul.copyright_text li,
-ul.social_media_links li{
-	display: inline-block;
-	float: left;
-	line-height: 40px;
-}
-ul.social_media_links li{
-	margin-left: 10px;
-}
-ul.copyright_text li:after{
-	display: inline-block;
-	margin: 0px 5px;
-	line-height: 40px;
-	content: "|";
-	color: #757575;
-}
-ul.copyright_text li p{
-	display: inline-block;
-}
-ul.copyright_text li:last-child:after{
-	display: none;
-}
-/*footer section css end*/
-
-@media(max-width: 767px){
-	.footer_right {
-		width: 100%;
-	}
-}
