--- a/css/style_s.css
+++ b/css/style_s.css
@@ -378,70 +378,13 @@ button.btn.search_btn {
 	height: 600px;
 }
 /*secondOpinion page css start*/
-.meet_our_doctor{
-	padding: 30px 0px;
-	border-bottom: 1px solid #dddddd;
-}
-.meet_our_doctor h2{
-	padding: 0px 37px;
-}
-.search_second_opinion p{
-	line-height: 33px;
-}
-.font_bold{
-	font-weight: 700!important;
-	margin: 10px 0px;
-}
-.doctor_slider{
-	padding: 30px;
-}
-.s_doctor_image{
-	width: 100%;
-	height: 100%;
-	overflow: hidden;
-}
-.s_doctor_image img{
-	max-height: 100%;
-	min-width: 100%;
-	max-width: 100%;
-	min-height: 100%;
-	object-fit: cover;
-}
-.doctor_single_slide{
-	margin: 20px ;
-}
-.doctor_single_slide p{
-	line-height: 30px;
-	text-align: center;
-	margin: 10px 45px;
-}
 .medical_records{
-	padding: 40px 0px;
+	padding: 30px 0px;
+	border-top: 1px solid #ddd;
 }
 .medical_records p{
 	line-height: 33px;
-	margin-top: 15px;
 }
-.doctor_slider button {
-	position: absolute;
-	top: 0;
-	bottom: 0;
-	margin: auto;
-	display: table;
-	height: 53px;
-	z-index: 11;
-	background-color: #008cd2;
-	color: black;
-	border-radius: 0px!important;
-	font-size: 27px;
-}
-.doctor_slider button.slick-prev{
-	left: 0px;
-}
-.doctor_slider button.slick-next{
-	right: 0px;
-}
-
 /*follow up consultation page css start*/
 .text_upper{
 	text-transform: uppercase;
@@ -525,6 +468,9 @@ input[type=radio] + label{
 .family_doctor_des{
 	padding: 20px 0px;
 	margin-top: 10px;
+}
+.family_doctor p{
+	line-height: 33px;
 }
 
 /*Physiotherapy detail list page css start*/
@@ -911,6 +857,65 @@ p.pain_management_list{
     top: 0;
     bottom: 0;
     margin: auto;
+}
+.left_drawer{
+	height: 100vh;
+}
+.left_drawer li{
+ list-style: none;
+ padding: 10px 19px;
+ border-bottom: 1px solid #ddd;
+
+}
+.left_drawer button {
+    width: 100%;
+    padding: 10px 16px;
+    background-color: #0c4e93;
+    color: #fff;
+    text-align: left;
+    margin-bottom: 1px;
+}
+.left_drawer li:before{
+	content: ">";
+	margin-right: 5px;
+}
+.accordion {
+  background-color: #eee;
+  color: #444;
+  cursor: pointer;
+  padding: 18px;
+  width: 100%;
+  text-align: left;
+  border: none;
+  outline: none;
+  transition: 0.4s;
+}
+.panel {
+  background-color: white;
+  max-height: 0;
+  overflow: hidden;
+  transition: max-height 0.3s ease-out;
+}
+.accordion:after {
+  content: "\02795";
+  font-size: 13px;
+  color: #fff;
+  float: right;
+  margin-left: 5px;
+  border: none;
+}
+.accordion .active:after {
+  content: "\2796";
+}
+.dashboard{
+	padding: 30px 0px ;
+}
+/*validate otp*/
+.validate_otp{
+	padding: 0px 30px;
+}
+.validate_otp a{
+	text-align: center;
 }
 @media (max-width: 1199px){
 	td.fc-day-number {
